TEMP Fix imgPreview
- Add scrollbars to imgPreview for smaller resolutions
- want to implement a better solution in the future

--- a/layout.css
+++ b/layout.css
@@ -58,10 +58,12 @@ a[href]:active {
 	position: fixed;
 	z-index: 100;
 	padding-top: 100px;
+	padding-bottom: 100px;
 	top: 0px;
 	left: 0px;
 	width: 100%;
-	height: 100%;
+	/* height: 100%; */
+	height: calc(100% - 200px);
 	overflow: auto;
 	background-color: rgba(0,0,0,0.8);
 	-webkit-backdrop-filter: blur(10px);
@@ -69,7 +71,7 @@ a[href]:active {
 }
 
 .previewContent {
-	margin: auto;
+	margin: auto auto auto auto;
 	display: block;
 	width: 80%;
 	max-width: 2560px;
